[gd_scene load_steps=5 format=2]

[ext_resource path="res://Table.gd" type="Script" id=1]
[ext_resource path="res://Stack.tscn" type="PackedScene" id=2]
[ext_resource path="res://DrawPile.tscn" type="PackedScene" id=3]
[ext_resource path="res://Discard.tscn" type="PackedScene" id=4]

[node name="Table" type="Node2D"]
script = ExtResource( 1 )

[node name="Stacks" type="GridContainer" parent="."]
margin_top = 188.0
margin_right = 1280.0
margin_bottom = 543.0
columns = 7
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Stack1" parent="Stacks" instance=ExtResource( 2 )]
margin_right = 179.0
margin_bottom = 355.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Stack2" parent="Stacks" instance=ExtResource( 2 )]
margin_left = 183.0
margin_right = 362.0
margin_bottom = 355.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Stack3" parent="Stacks" instance=ExtResource( 2 )]
margin_left = 366.0
margin_right = 545.0
margin_bottom = 355.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Stack4" parent="Stacks" instance=ExtResource( 2 )]
margin_left = 549.0
margin_right = 728.0
margin_bottom = 355.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Stack5" parent="Stacks" instance=ExtResource( 2 )]
margin_left = 732.0
margin_right = 911.0
margin_bottom = 355.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Stack6" parent="Stacks" instance=ExtResource( 2 )]
margin_left = 915.0
margin_right = 1094.0
margin_bottom = 355.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Stack7" parent="Stacks" instance=ExtResource( 2 )]
margin_left = 1098.0
margin_right = 1277.0
margin_bottom = 355.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Aces" type="GridContainer" parent="."]
margin_left = 386.0
margin_top = 6.0
margin_right = 893.0
margin_bottom = 178.0
columns = 4
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Stack1" parent="Aces" instance=ExtResource( 2 )]
margin_right = 123.0
margin_bottom = 172.0
size_flags_horizontal = 3
size_flags_vertical = 3
card_offset = 0
stack_rule = 0

[node name="Stack2" parent="Aces" instance=ExtResource( 2 )]
margin_left = 127.0
margin_right = 250.0
margin_bottom = 172.0
size_flags_horizontal = 3
size_flags_vertical = 3
card_offset = 0
stack_rule = 0

[node name="Stack3" parent="Aces" instance=ExtResource( 2 )]
margin_left = 254.0
margin_right = 377.0
margin_bottom = 172.0
size_flags_horizontal = 3
size_flags_vertical = 3
card_offset = 0
stack_rule = 0

[node name="Stack4" parent="Aces" instance=ExtResource( 2 )]
margin_left = 381.0
margin_right = 504.0
margin_bottom = 172.0
size_flags_horizontal = 3
size_flags_vertical = 3
card_offset = 0
stack_rule = 0

[node name="DrawPile" parent="." instance=ExtResource( 3 )]
margin_left = 440.758
margin_top = 550.027
margin_right = 543.758
margin_bottom = 708.027

[node name="Discard" parent="." instance=ExtResource( 4 )]
margin_left = 565.987
margin_top = 548.799
margin_right = 668.987
margin_bottom = 706.799

[node name="Fade" type="ColorRect" parent="."]
visible = false
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 1, 1, 1, 0.623529 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VictoryDialog" type="AcceptDialog" parent="."]
margin_left = 515.65
margin_top = 302.411
margin_right = 729.65
margin_bottom = 360.411
popup_exclusive = true
window_title = "Victory!"
dialog_text = "You win! Click OK to play again!"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="popup_hide" from="VictoryDialog" to="." method="_on_VictoryDialog_popup_hide"]
